fixed styling on mobile for image

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -61,3 +61,7 @@
 .caption a:active {
   color: red;
 }
+
+.self_image {
+  padding-bottom: 20px;
+}
